[package]
name = "gear"
version = "0.1.0"
authors = ["Chay Nabors <chaynabors@gmail.com>"]
edition = "2018"

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
crossbeam = "0.8.1"
laminar = "0.5.0"
log = "0.4.14"
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
raw-window-handle = "0.3.3"
rodio = "0.14.0"
tobj = "3.1.0"
tokio = "1.10.0"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", branch = "master" }
winit = "0.25.0"

[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "1.10.0", features = ["macros", "rt"] }
